conformance/tests/tlsroute-hostname-intersection.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw-tlsroute-exact-hostname-x-1
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
  - name: listener-exact-hostname
    protocol: TLS
    port: 443
    hostname: abc.example.com
    allowedRoutes:
      namespaces:
        from: Same
      kinds:
      - kind: TLSRoute
    tls:
      mode: Passthrough
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw-tlsroute-more-specific-wc-hostname-x-2
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
  - name: listener-more-specific-wc-hostname
    protocol: TLS
    port: 443
    hostname: "*.example.com"
    allowedRoutes:
      namespaces:
        from: Same
      kinds:
      - kind: TLSRoute
    tls:
      mode: Passthrough
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw-tlsroute-less-specific-wc-hostname-x-3
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
  - name: listener-less-specific-wc-hostname
    protocol: TLS
    port: 443
    hostname: "*.com"
    allowedRoutes:
      namespaces:
        from: Same
      kinds:
      - kind: TLSRoute
    tls:
      mode: Passthrough
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw-tlsroute-empty-hostname-x-4
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
  - name: listener-empty-hostname
    protocol: TLS
    port: 443
    allowedRoutes:
      namespaces:
        from: Same
      kinds:
      - kind: TLSRoute
    tls:
      mode: Passthrough
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: tlsroute-more-specific-wc-hostname-x-1
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: gw-tlsroute-exact-hostname-x-1
    namespace: gateway-conformance-infra
  hostnames:
  - "*.example.com"
  rules:
  - backendRefs:
    - name: tls-backend
      port: 443
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: tlsroute-exact-hostname-x-2
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: gw-tlsroute-more-specific-wc-hostname-x-2
    namespace: gateway-conformance-infra
  hostnames:
  - abc.example.com
  rules:
  - backendRefs:
    - name: tls-backend
      port: 443
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: tlsroute-less-specific-wc-hostname-x-2
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: gw-tlsroute-more-specific-wc-hostname-x-2
    namespace: gateway-conformance-infra
  hostnames:
  - "*.com"
  rules:
  - backendRefs:
    - name: tls-backend-2
      port: 443
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: tlsroute-exact-hostname-x-3
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: gw-tlsroute-less-specific-wc-hostname-x-3
    namespace: gateway-conformance-infra
  hostnames:
  - abc.example.com
  rules:
  - backendRefs:
    - name: tls-backend
      port: 443
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: tlsroute-more-specific-wc-hostname-x-3
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: gw-tlsroute-less-specific-wc-hostname-x-3
    namespace: gateway-conformance-infra
  hostnames:
  - "*.example.com"
  rules:
  - backendRefs:
    - name: tls-backend-2
      port: 443
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: tlsroute-exact-hostname-x-4
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: gw-tlsroute-empty-hostname-x-4
    namespace: gateway-conformance-infra
  hostnames:
  - abc.example.com
  rules:
  - backendRefs:
    - name: tls-backend
      port: 443
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: tlsroute-less-specific-wc-hostname-x-4
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: gw-tlsroute-empty-hostname-x-4
    namespace: gateway-conformance-infra
  hostnames:
  - "*.com"
  rules:
  - backendRefs:
    - name: tls-backend-2
      port: 443
